--- a/style.css
+++ b/style.css
@@ -11,3 +11,15 @@ h1{
 .body2{
     font-size: 14px;
 }
+
+a:link{
+    color: green;
+}
+
+a:visited{
+    color: pink;
+}
+
+a:hover{
+    color: red;
+}
